# KALYE

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.services.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_rls_policies.py
backend/scripts/: backup_database.py  download_models.py  health_check.py  performance_benchmark.py  run_evaluation.py  seed_database.py
backend/src/ai/: model_config.py  model_manager.py
backend/src/ai/captioning/: blip_captioner.py  caption_embedder.py  caption_formatter.py
backend/src/ai/detection/: detection_types.py  postprocessor.py  yolo_detector.py
backend/src/ai/segmentation/: metrics.py  postprocessor.py  segformer.py  segmentation_result.py
backend/src/analytics/: trend_analyzer.py  walkability_calculator.py
backend/src/api/: main.py
backend/src/api/middleware/: auth.py  rate_limit.py  security_headers.py
backend/src/api/v1/: analytics.py  auth.py  detections.py  images.py  rag.py
backend/src/api/websocket/: manager.py  messages.py  routes.py
backend/src/config/: settings.py
backend/src/db/: models.py  postgres.py
backend/src/evaluation/: dataset_loader.py  evaluator.py  metrics.py
backend/src/geo/: barangay_stats.py  clustering.py  route_analyzer.py  spatial_queries.py
backend/src/images/: exif_extractor.py  image_processor.py  image_validator.py  upload_handler.py
backend/src/observability/: metrics.py  middleware.py  telemetry.py
backend/src/services/: claude_vision.py  local_ai.py
backend/src/services/rag/: embedder.py  ollama_client.py  prompts.py  rag_pipeline.py  vector_store.py
backend/src/storage/: minio_client.py  storage_manager.py
backend/src/workers/: celery_app.py  progress_tracker.py  websocket_notifier.py
backend/src/workers/tasks/: __init__.py  batch_processing.py  captioning.py  detection.py  image_processing.py  segmentation.py
backend/tests/: conftest.py  test_api.py  test_captioning.py  test_db.py  test_detection.py  test_evaluation.py  test_geospatial.py  test_image_upload.py  test_model_manager.py  test_observability.py  test_rag.py  test_segmentation.py  test_storage.py  test_walkability.py  test_websocket.py  test_workers.py
backend/tests/load/: k6_upload.js
frontend/: .env.example  next.config.js  package-lock.json  (+3 more)
(+75 files in other folders)
