[tool.poetry]
name = "kalye-backend"
version = "0.1.0"
description = "AI-powered walkability intelligence platform for Metro Manila"
authors = ["KALYE Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Backend
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
strawberry-graphql = {extras = ["fastapi"], version = "^0.243.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.12"
httpx = "^0.27.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.30.0"
psycopg = {extras = ["binary"], version = "^3.2.0"}
alembic = "^1.14.0"
geoalchemy2 = "^0.15.0"

# Task Queue
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.2.0"

# Storage
minio = "^7.2.0"
boto3 = "^1.35.0"

# Image processing (lightweight)
pillow = "^10.4.0"

# Geospatial
shapely = "^2.0.6"
geopy = "^2.4.1"
pgvector = "^0.3.0"

# Auth
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Observability
opentelemetry-api = "^1.28.0"
opentelemetry-sdk = "^1.28.0"
opentelemetry-instrumentation-fastapi = "^0.49b0"
prometheus-client = "^0.21.0"

# Resilience
tenacity = "^9.0.0"
email-validator = "^2.3.0"
bcrypt = "4.0.1"

[tool.poetry.group.ai]
optional = true

[tool.poetry.group.ai.dependencies]
torch = "^2.4.0"
torchvision = "^0.19.0"
transformers = "^4.46.0"
ultralytics = "^8.3.0"
onnxruntime = "^1.19.0"
opencv-python-headless = "^4.10.0"
sentence-transformers = "^3.2.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
ollama = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
faker = "^30.0.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
testcontainers = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
